<resources>
    <string name="app_name">Ecommerce</string>
    <string name="login_cepat_dengan">Login Cepat Dengan</string>
    <string name="lanjutkan_dengan_facebook">Lanjutkan Dengan Facebook</string>
    <string name="email_telepon_username">Email/Telepon/Username</string>
    <string name="login">login</string>
    <string name="login_dengan_google">Login Dengan Google</string>
    <string name="password">password</string>
</resources>
